--- a/index.html
+++ b/index.html
@@ -1,53 +1,95 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Subir Archivo</title>
   <script>
-function cargarLista() {
-  fetch('/list')
-    .then((response) => response.json())
-    .then((data) => {
-      const listaArchivos = document.getElementById('listaArchivos');
+    function cargarLista() {
+      fetch('/list')
+        .then((response) => response.json())
+        .then((data) => {
+          const listaArchivos = document.getElementById('listaArchivos');
+          listaArchivos.innerHTML = '';
+          data.forEach((archivo) => {
+            const div = document.createElement('div');
+            div.textContent = archivo.name;
+            const btnEliminar = document.createElement('button');
+            btnEliminar.textContent = 'Eliminar';
+            btnEliminar.addEventListener('click', () => {
+              fetch('/delete/' + archivo.name, { method: 'DELETE' })
+                .then((response) => {
+                  if (!response.ok) {
+                    throw new Error('Error al eliminar el archivo');
+                  }
+                  return response.text();
+                })
+                .then((message) => {
+                  console.log(message);
+                })
+                .catch((error) => {
+                  console.error(error);
 
-      data.forEach((archivo) => {
-        const div = document.createElement('div');
-        div.textContent = archivo.name;
+                });
+              cargarLista(); // Recargar la lista de archivos después de eliminar
+            });
+            const btnDescargar = document.createElement('button');
+            btnDescargar.textContent = 'Descargar';
+            btnDescargar.addEventListener('click', () => {
 
-        const btnEliminar = document.createElement('button');
-        btnEliminar.textContent = 'Eliminar';
-        btnEliminar.addEventListener('click', () => {
-          // lógica para eliminar el archivo
-          console.log('Eliminar', archivo.name);
+            });
+
+            div.appendChild(btnEliminar);
+            div.appendChild(btnDescargar);
+            listaArchivos.appendChild(div);
+          });
+        })
+        .catch((error) => {
+          console.error('Error al cargar la lista de archivos:', error);
         });
+    }
 
-        const btnDescargar = document.createElement('button');
-        btnDescargar.textContent = 'Descargar';
-        btnDescargar.addEventListener('click', () => {
-          // lógica para descargar el archivo
-          console.log('Descargar', archivo.name);
-        });
+    cargarLista();
 
-        div.appendChild(btnEliminar);
-        div.appendChild(btnDescargar);
-        listaArchivos.appendChild(div);
-      });
-    })
-    .catch((error) => {
-      console.error('Error al cargar la lista de archivos:', error);
-    });
-}
-
-cargarLista();
 
   </script>
 </head>
+
 <body>
   <h1>Subir Archivo al Servidor FTP</h1>
-  <form action="/upload" method="post" enctype="multipart/form-data">
+  <form id="uploadForm" enctype="multipart/form-data">
     <input type="file" name="file" accept=".jpg, .png, .pdf, .doc, .docx, .xls, .xlsx, .ppt, .pptx">
     <button type="submit">Subir</button>
   </form>
+  <script>
 
+    document.getElementById('uploadForm').addEventListener('submit', function (event) {
+      event.preventDefault(); // Evitar que el formulario se envíe de la forma predeterminada
+
+      const formData = new FormData(this); // Crear un objeto FormData a partir del formulario
+
+      fetch('/upload', {
+        method: 'POST',
+        body: formData,
+      })
+        .then((response) => {
+          if (!response.ok) {
+            throw new Error('Error al subir el archivo');
+          }
+          return response.text();
+        })
+        .then((message) => {
+          console.log(message);
+          cargarLista(); // Recargar la lista de archivos después de subir
+        })
+        .catch((error) => {
+          console.error(error);
+        });
+    });
+  </script>
+
+
+  <br>
   <div id="listaArchivos"></div>
 </body>
+
 </html>
