--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
                   console.error(error);
 
                 });
-              cargarLista(); // Recargar la lista de archivos después de eliminar
+              cargarLista(); 
             });
             const btnDescargar = document.createElement('button');
             btnDescargar.textContent = 'Descargar';
             btnDescargar.addEventListener('click', () => {
+              const link = document.createElement('a');
+              link.href = '/download/' + archivo.name;
+              link.download = archivo.name;
+              link.click();
 
             });
 
