--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <head>
   <title>Subir Archivo</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script>
-    
+
   </script>
 </head>
 
@@ -24,20 +25,21 @@
 
   <main>
     <section>
-       <button onclick="newFile()">
+      <button onclick="document.getElementById('fileInput').click()">
         <span> <span class="material-symbols-outlined">add</span> Nuevo</span>
-       </button> 
+      </button>
+      <input type="file" id="fileInput" style="display: none;">
 
       <ul>
         <li> <span class="material-symbols-outlined">folder</span>Mi unidad</li>
-      </ul> 
+      </ul>
     </section>
 
     <section class="container-files">
       <h1>Subir Archivo al Servidor FTP</h1>
       <form id="uploadForm" enctype="multipart/form-data">
         <span class="custom-file-upload">
-          <label for="file">Choose a file</label>
+          <label for="file"></label>
           <input type="file" name="file" accept=".jpg, .png, .pdf, .doc, .docx, .xls, .xlsx, .ppt, .pptx" />
         </span>
 
