--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,6 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <script>
-
-  </script>
 </head>
 
 <body>
@@ -18,14 +15,22 @@
       <span class="title">Un-Drive</span>
     </div>
     <div class="container-search">
-      <input type="search" placeholder="Buscar en un-drive">
+      <div class="container-search-grid">
+        <span class="material-symbols-outlined">
+          search
+        </span>
+        <input type="search" placeholder="Buscar en un-drive">
+        <span class="material-symbols-outlined">
+          tune
+        </span>
+      </div>
     </div>
 
   </header>
 
   <main>
     <section>
-      <button onclick="document.getElementById('fileInput').click()">
+      <button onclick="document.getElementById('fileInput').click()"  class="btn-white">
         <span> <span class="material-symbols-outlined">add</span> Nuevo</span>
       </button>
       <input type="file" id="fileInput" style="display: none;">
@@ -36,22 +41,34 @@
     </section>
 
     <section class="container-files">
-      <h1>Subir Archivo al Servidor FTP</h1>
+      <h2>
+        <span class="material-symbols-outlined">
+          unarchive
+        </span>
+        Subir Archivo al Servidor FTP
+      </h2>
       <form id="uploadForm" enctype="multipart/form-data">
         <span class="custom-file-upload">
           <label for="file"></label>
           <input type="file" name="file" accept=".jpg, .png, .pdf, .doc, .docx, .xls, .xlsx, .ppt, .pptx" />
         </span>
 
-        <button type="submit">Subir</button>
+        <button type="submit" class="btn-white">Subir</button>
       </form>
-      <h2>Crear Carpeta en el Servidor FTP</h2>
-      <input type="text" id="nombreCarpeta" placeholder=" Nombre de la carpeta">
-      <button onclick="crearCarpeta()">Crear</button>
-      <br>
 
-      <div id="listaArchivos">
+      <div class="container-create-folder">
+        <h2>
+          <span class="material-symbols-outlined">
+            create_new_folder
+          </span>
+            Crear Carpeta en el Servidor FTP
+        </h2>
+        <input type="text" id="nombreCarpeta" placeholder=" Nombre de la carpeta">
+        <button onclick="crearCarpeta()">Crear</button>
+        <br>
       </div>
+     
+      <div id="listaArchivos"></div>
     </section>
 
   </main>
